Public guidance content updates and new page structure, also start page with green start button

--- a/app/views/guidance/full/v2/before-you-appeal.html
+++ b/app/views/guidance/full/v2/before-you-appeal.html
@@ -38,7 +38,10 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Before you appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="how-to-appeal"> How to appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -97,30 +100,46 @@
         <h3 class="govuk-heading-m pins-guidance-h3">No decision by the local planning department’s deadline</h3>
 
         <p class="govuk-body">
-          You can speak to your local planning department to find out if it's likely to make a decision soon.
+          You can speak to your local planning department to find out if it’s likely to make a decision soon.
         </p>
         <p class="govuk-body">
-          When you appeal, you're asking the Planning Inspectorate to make a decision on your planning application. This means it's no longer your local planning department's decision.
+          When you appeal, you’re asking the Planning Inspectorate to make a decision on your planning application. This means it’s no longer your local planning department’s decision.
         </p>
         <p class="govuk-body">
-          If your local planning department makes a decision after you've made the appeal, the Planning Inspectorate will take it into account. But the Planning Inspectorate could disagree and make a different decision.
+          If your local planning department makes a decision after you’ve made the appeal, the Planning Inspectorate will take it into account. But the Planning Inspectorate could disagree and make a different decision.
         </p>
 
         <h2 class="govuk-heading-l pins-guidance-h2">How the Planning Inspectorate makes its decision</h2>
+
         <p class="govuk-body">
           The Planning Inspectorate can make a decision about your appeal in 1 of 3 ways:
         </p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li>written representations</li>
           <li>hearing</li>
           <li>public inquiry</li>
         </ul>
+
         <p class="govuk-body">
           It asks you which you think is most suitable when you submit your appeal.
         </p>
+
         <p class="govuk-body">
-          You should choose how you will answer in advance. The option you choose affects the information and documents you must submit.
+          You should choose how you will answer in advance.
         </p>
+
+        <!-- <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            If you choose a hearing or public inquiry, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
+          </strong>
+        </div> -->
+
+        <div class="govuk-inset-text">
+          If you choose a hearing or public inquiry, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
+        </div>
 
         <h3 class="govuk-heading-m pins-guidance-h3">Written representations</h3>
         <p class="govuk-body">
@@ -131,6 +150,7 @@
           <li>the local planning department</li>
           <li>other interested parties, for example, neighbours</li>
         </ul>
+
         <p class="govuk-body">
           This is the most common way that the Planning Inspectorate makes decisions about appeals.
         </p>
@@ -154,11 +174,7 @@
         </p>
 
         <p class="govuk-body">
-          <b>[example]</b>
-        </p>
-
-        <p class="govuk-body">
-          If you choose a hearing, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
+          [example]
         </p>
 
         <h3 class="govuk-heading-m pins-guidance-h3">Public inquiry</h3>
@@ -176,18 +192,15 @@
         </p>
 
         <p class="govuk-body">
-          <b>[example]</b>
+          [example]
         </p>
 
         <p class="govuk-body">
           You should get legal advice if you think your appeal needs a public inquiry. A legal representative can help you plan who your witnesses will be. You should start planning this before you submit your appeal.
         </p>
 
-        <p class="govuk-body">
-          If you choose a public inquiry, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
-        </p>
-
         <h2 class="govuk-heading-l pins-guidance-h2">Documents to prepare</h2>
+
         <p class="govuk-body">
           You must submit certain documents with your appeal.
         </p>
@@ -216,12 +229,12 @@
           You need to prepare this in a document to upload when you appeal.
         </p>
         <p class="govuk-body">
-          Find out more about <a href="#" class="govuk-link">writing your appeal statement</a>.
+          Find out more about <a href="#" class="govuk-link">your appeal statement</a>.
         </p>
 
         <h3 class="govuk-heading-m pins-guidance-h3">Documents from your planning application</h3>
         <p class="govuk-body">
-          You'll be asked to submit:
+          You’ll be asked to submit:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>your planning application form</li>
@@ -231,43 +244,57 @@
           <li>the decision letter from the local planning department, if you have one</li>
         </ul>
         <p class="govuk-body">
-          If you do not have these, you can download them from your local planning department's website.
+          If you do not have these, you can download them from your local planning department’s website.
         </p>
         <p class="govuk-body">
           The documents must be readable and not have any censored text.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">Draft statement of common ground</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          Draft statement of common ground
+        </h3>
+
         <p class="govuk-body">
           Hearing and public inquiry appeals need a statement of common ground. This says what you and the local planning department agree on. It helps the Planning Inspector to focus on where you disagree.
         </p>
+
         <p class="govuk-body">
           You must upload a draft of this statement with your appeal.
         </p>
+
+        <p class="govuk-body">
+          Your draft should say what you think your local planning department will agree with you about. You can prepare this using the statement of common ground pro forma.
+        </p>
+
         <p class="govuk-body">
           After you submit your appeal, you work with your local planning department to finalise and sign the statement. Your local planning department then submits the final, signed document.
         </p>
-        <p class="govuk-body">
-          Find out more about <a href="#" class="govuk-link">drafting your statement of common ground</a>.
-        </p>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Telling people about your appeal</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          Telling people about your appeal
+        </h2>
+
         <p class="govuk-body">
           If you do not own all the land involved in the appeal, you must tell the people that do before you appeal.
         </p>
+
         <p class="govuk-body">
           If you do not know who they are, you must try to identify them. This includes:
         </p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li>searching the land registry</li>
           <li>putting up a site notice at the appeal site</li>
         </ul>
+
         <p class="govuk-body">
           If you cannot find out who they are, you must advertise your appeal.
         </p>
+
         <div class="govuk-inset-text">
-          If you need to tell people about your appeal, or advertise it, you must use a copy of the <a href="#" class="govuk-link">form in annexe 2A or 2B of the 'making your appeal' guidance (opens in a new window or tab)</a>.
+          If you need to tell people about your appeal, or advertise it, you must use a copy of the <a href="#" class="govuk-link">form in annexe 2A or 2B of the ’making your appeal’ guidance (opens in a new window or tab)</a>.
         </div>
+
         <p class="govuk-body">
           The Planning Inspectorate will ask you to confirm you have done this when you submit your appeal.
         </p>
@@ -291,7 +318,7 @@
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="how-to-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -301,7 +328,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">How to appeal</span>
+                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
 
@@ -315,37 +342,24 @@
         </div>
 
       </div>
-
-
     </div>
 
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-  <div class="gem-c-contextual-footer">
-
-  <div class="gem-c-related-navigation">
-
-
-
-
-
-      <nav role="navigation" class="gem-c-related-navigation__nav-section">
-        <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
-        <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
-        </ul>
-      </nav>
-
-  </div>
-
-  </div>
-
-
+      <div class="govuk-grid-column-two-thirds">
+        <div class="gem-c-contextual-footer">
+          <div class="gem-c-related-navigation">
+            <nav role="navigation" class="gem-c-related-navigation__nav-section">
+              <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
+              <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
   </main>
 </div>
 
