--- a/app/views/guidance/full/v2/claim-costs-for-your-appeal.html
+++ b/app/views/guidance/full/v2/claim-costs-for-your-appeal.html
@@ -39,7 +39,10 @@
                 <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="how-to-appeal">How to appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -109,37 +112,25 @@
         </div>
 
       </div>
-
-
     </div>
 
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-  <div class="gem-c-contextual-footer">
-
-  <div class="gem-c-related-navigation">
-
-
-
-
-
-      <nav role="navigation" class="gem-c-related-navigation__nav-section">
-        <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
-        <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
-        </ul>
-      </nav>
-
-  </div>
-
-  </div>
-
-
+      <div class="govuk-grid-column-two-thirds">
+        <div class="gem-c-contextual-footer">
+          <div class="gem-c-related-navigation">
+            <nav role="navigation" class="gem-c-related-navigation__nav-section">
+              <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
+              <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+
   </main>
 </div>
 
