--- a/app/views/guidance/full/v2/stages-of-an-appeal.html
+++ b/app/views/guidance/full/v2/stages-of-an-appeal.html
@@ -39,7 +39,10 @@
                 <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="how-to-appeal">How to appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">The stages of an appeal
               </li>
@@ -60,24 +63,24 @@
 
         <h2 class="govuk-heading-l" id="part-title">The stages of an appeal</h2>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">1. Submitting your appeal</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">1. Submitting your appeal</h2>
         <p class="govuk-body">
           Submit your appeal statement and other documents using the <a href="#" class="govuk-link">appeal a planning decision service</a>.
         </p>
         <p class="govuk-body">
-          Once you've done this, you get a PDF copy of your appeal. You must send this to the local planning department with a copy of your appeal statement.
+          Once you’ve done this, you get a PDF copy of your appeal. You must send this to the local planning department with a copy of your appeal statement.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">2. Checking your appeal</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">2. Checking your appeal</h2>
 
         <p class="govuk-body">
-          The Planning Inspectorate checks you've submitted everything it needs to progress your appeal.
+          The Planning Inspectorate checks you’ve submitted everything it needs to progress your appeal.
         </p>
         <p class="govuk-body">
           They contact you once they have done this. If anything is missing, they ask you to submit it.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">3. Evidence from your application</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">3. Evidence from your application</h2>
 
         <p class="govuk-body">
           The local planning department sends the Planning Inspectorate a copy of the case file for your planning application.
@@ -86,7 +89,7 @@
           You get a copy of this for your information.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">4. Statements from other parties</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">4. Statements from other parties</h2>
 
         <p class="govuk-body">
           The local planning department can respond to your appeal with a written statement. Other interested parties can also submit statements about your appeal. For example, your neighbours.
@@ -95,14 +98,14 @@
           You get copies of any statements for your information.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">5. Responding to the evidence</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">5. Responding to the evidence</h2>
 
         <p class="govuk-body">
           This stage depends on how the Planning Inspectorate is deciding your appeal.
         </p>
 
         <p class="govuk-body">
-          'Evidence' is anything that's been submitted by you, your local planning department, or another interested party.
+          ’Evidence’ is anything that’s been submitted by you, your local planning department, or another interested party.
         </p>
 
         <p class="govuk-body">
@@ -112,7 +115,7 @@
         <h4 class="govuk-heading-s">Written representations appeals</h4>
 
         <p class="govuk-body">
-          You can respond to any statements submitted by other parties. You do this in writing. This is called your 'final comments'.
+          You can respond to any statements submitted by other parties. You do this in writing. This is called your ’final comments’.
         </p>
 
         <p class="govuk-body">
@@ -140,10 +143,10 @@
         </p>
 
         <p class="govuk-body">
-          At the inquiry, your and your local planning department's legal representatives cross-examine the evidence. They question you, the local planning department, and expert witnesses.
+          At the inquiry, your and your local planning department’s legal representatives cross-examine the evidence. They question you, the local planning department, and expert witnesses.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">6. Site visit</h3>
+        <h2 class="govuk-heading-m pinl-guidance-h2">6. Site visit</h2>
 
         <p class="govuk-body">
           The Planning Inspectorate visits your appeal site to see how your development might impact the surrounding area.
@@ -157,7 +160,7 @@
           Sometimes, they decide the appeal does not need a site visit.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">7. Decision</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">7. Decision</h2>
 
         <p class="govuk-body">
           The Planning Inspectorate uses the evidence from you, the local planning department and other parties to make a decision.
@@ -166,12 +169,12 @@
           <a href="#" class="govuk-link">Check how long planning appeal decisions are taking</a>
         </p>
 
-<!-- Navigation-->
+        <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="how-to-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -181,7 +184,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">How to appeal</span>
+                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
@@ -209,37 +212,25 @@
         </div>
 
       </div>
-
-
     </div>
 
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-  <div class="gem-c-contextual-footer">
-
-  <div class="gem-c-related-navigation">
-
-
-
-
-
-      <nav role="navigation" class="gem-c-related-navigation__nav-section">
-        <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
-        <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
-        </ul>
-      </nav>
-
-  </div>
-
-  </div>
-
-
+      <div class="govuk-grid-column-two-thirds">
+        <div class="gem-c-contextual-footer">
+          <div class="gem-c-related-navigation">
+            <nav role="navigation" class="gem-c-related-navigation__nav-section">
+              <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
+              <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+
   </main>
 </div>
 
