--- a/app/views/guidance/full/v2/when-you-can-appeal.html
+++ b/app/views/guidance/full/v2/when-you-can-appeal.html
@@ -39,7 +39,10 @@
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="how-to-appeal"> How to appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -66,7 +69,7 @@
           If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal.
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies.
+          A reason for refusal is incorrect when it goes against the local planning department’s development plan and planning policies.
         </p>
 
         <h3 class="govuk-heading-m pins-guidance-h3">Granted planning permission with conditions</h3>
@@ -74,7 +77,7 @@
           If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions.
         </p>
         <p class="govuk-body">
-          A condition is incorrect when it's:
+          A condition is incorrect when it’s:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>unnecessary</li>
@@ -113,7 +116,7 @@
         </p>
         <div class="govuk-inset-text">
           <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application.
+            Your deadline is sooner if you’re appealing a refused householder planning application.
           </p>
           <p class="govuk-body">
             You made a householder planning application if you applied for:
@@ -195,37 +198,25 @@
         </div>
 
       </div>
-
-
     </div>
 
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-  <div class="gem-c-contextual-footer">
-
-  <div class="gem-c-related-navigation">
-
-
-
-
-
-      <nav role="navigation" class="gem-c-related-navigation__nav-section">
-        <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
-        <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
-        </ul>
-      </nav>
-
-  </div>
-
-  </div>
-
-
+      <div class="govuk-grid-column-two-thirds">
+        <div class="gem-c-contextual-footer">
+          <div class="gem-c-related-navigation">
+            <nav role="navigation" class="gem-c-related-navigation__nav-section">
+              <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
+              <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+
   </main>
 </div>
 
