--- a/app/views/guidance/full/v2/your-appeal-statement.html
+++ b/app/views/guidance/full/v2/your-appeal-statement.html
@@ -38,7 +38,11 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">How to appeal
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
+                Your appeal statement
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -58,48 +62,50 @@
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l" id="part-title">How to appeal</h2>
-        <p class="govuk-body">
-          You appeal using the <a href="#" class="govuk-link">appeal a planning decision service</a>.
-        </p>
-        <p class="govuk-body">
-          You must submit a complete appeal by 23.59pm on the day of your deadline. Find out about <a href="#" class="govuk-link">your deadline to appeal</a>.
-        </p>
-        <p class="govuk-body">
-          An appeal is complete when it has all the documents and information the Planning Inspectorate needs to progress your appeal.
-        </p>
+        <h2 class="govuk-heading-l" id="part-title">
+          Your appeal statement
+        </h2>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Your appeal statement</h2>
         <p class="govuk-body">
           Your appeal statement is the main part of your appeal. This is where you explain your reasons for appealing.
         </p>
+
         <p class="govuk-body">
-          You can only submit this once, so it's important to get it right.
+          You can only submit this once, so it’s important to get it right.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">How to write your appeal statement</h3>
         <p class="govuk-body">
-          You should prepare this in a document to upload with your appeal.
+          You should prepare your statement in a document to upload with your appeal.
         </p>
 
-        <h4 class="govuk-heading-s">If you're appealing a refusal</h4>
+        <h3 class="govuk-heading-s">
+          If you’re appealing a refusal
+        </h3>
+
         <p class="govuk-body">
           You must explain why all the reasons for refusal are incorrect, based on planning policy.
         </p>
+
         <p class="govuk-body">
           You can find the reasons for refusal on your decision letter. Each reason for refusal includes the relevant planning policy and document numbers.
         </p>
+
         <p class="govuk-body">
-          The Planning Officer's report explains how the local planning department has applied the policies.
+          The Planning Officer’s report explains how the local planning department has applied the policies.
         </p>
+
         <p class="govuk-body">
           For your appeal to be successful, the Planning Inspectorate must agree that all the reasons for refusal are incorrect.
         </p>
 
-        <h4 class="govuk-heading-s">If you're appealing conditions</h4>
+        <h3 class="govuk-heading-s">
+          If you’re appealing conditions
+        </h3>
+
         <p class="govuk-body">
           You must explain why the conditions are either:
         </p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li>unnecessary</li>
           <li>irrelevant to planning</li>
@@ -108,55 +114,69 @@
           <li>vague</li>
           <li>unreasonable</li>
         </ul>
+
         <p class="govuk-body">
-          If you're asking for the conditions to be changed, instead of removed, you should say what you want them to be changed to.
+          If you’re asking for the conditions to be changed, instead of removed, you should say what you want them to be changed to.
         </p>
 
-        <h4 class="govuk-heading-s">If you're appealing a late planning decision</h4>
+        <h3 class="govuk-heading-s">
+          If you’re appealing a late planning decision
+        </h3>
+
         <p class="govuk-body">
           You must explain why your planning application should be granted,  based on planning policy.
         </p>
+
         <p class="govuk-body">
           You should focus on the parts of your application that your local planning department is likely to disagree with, if you know what these are.
         </p>
 
-        <h4 class="govuk-heading-s">Respond to comments from interested parties</h4>
+        <h3 class="govuk-heading-s">
+          Respond to comments from interested parties
+        </h3>
+
         <p class="govuk-body">
           You can include responses to comments from interested parties in your appeal statement. You only need to do this if they relate to reasons for appealing.
         </p>
 
-        <h4 class="govuk-heading-s">Supporting documents</h4>
+        <h3 class="govuk-heading-s">
+          Supporting documents
+        </h3>
+
         <p class="govuk-body">
           You can also include other documents that support your appeal. For example, independent reports, updated plans and drawings, and photographs.
         </p>
+
         <p class="govuk-body">
           If you mention supporting documents in your statement, you must submit them with your appeal. If you do not, it will delay your appeal and you might miss your deadline.
         </p>
 
-        <h4 class="govuk-heading-s">Personal information</h4>
+        <h3 class="govuk-heading-s">
+          Sensitive information
+        </h3>
+
         <p class="govuk-body">
-          <b>xxxxx</b>
+          Avoid including sensitive information (also called special category information) if it’s not relevant to your appeal. Any sensitive information you share may be shared publicly if the Planning Inspectorate agrees that it’s relevant to your appeal.
         </p>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Draft statement of common ground</h2>
         <p class="govuk-body">
-          A statement of common ground says what you and the local planning department agree on. You must upload a draft of this with your appeal.
+          Sensitive information includes health, race and gender.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">How to write your draft statement of common ground</h3>
+        <h3 class="govuk-heading-l pins-guidance-h3">
+          Inflammatory and abusive language
+        </h3>
+
         <p class="govuk-body">
-          You should draft your statement using the <a href="#" class="govuk-link">statement of common ground pro forma</a>.
-        </p>
-        <p class="govuk-body">
-          You should say what you believe your local planning department will agree with you about. After you submit your appeal, you work with your local planning department to finalise and agree the statement.
+          You must not include inflammatory or abusive language.
         </p>
 
-<!-- Navigation-->
+        <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -166,7 +186,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Before you appeal</span>
+                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
@@ -194,37 +214,25 @@
         </div>
 
       </div>
-
-
     </div>
 
     <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-  <div class="gem-c-contextual-footer">
-
-  <div class="gem-c-related-navigation">
-
-
-
-
-
-      <nav role="navigation" class="gem-c-related-navigation__nav-section">
-        <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
-        <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
-          <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
-        </ul>
-      </nav>
-
-  </div>
-
-  </div>
-
-
+      <div class="govuk-grid-column-two-thirds">
+        <div class="gem-c-contextual-footer">
+          <div class="gem-c-related-navigation">
+            <nav role="navigation" class="gem-c-related-navigation__nav-section">
+              <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>
+              <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Local councils and services</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and building regulations</a></li>
+                <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="javascript:preventDefault();">Planning permission and appeals</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+
   </main>
 </div>
 
