--- a/app/views/guidance/full/v2/submit-an-appeal.html
+++ b/app/views/guidance/full/v2/submit-an-appeal.html
@@ -29,17 +29,17 @@
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
-
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Overview
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
+                Submit an appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
@@ -62,52 +62,112 @@
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l" id="part-title">Overview</h2>
+        <h2 class="govuk-heading-l" id="part-title">
+          Submit an appeal
+        </h2>
 
         <p class="govuk-body">
-          This guidance is for people who want to appeal most types of planning decision. This includes if you have not got a decision by the local planning department’s deadline.
+          Before you appeal, make sure you have:
         </p>
 
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            You need different guidance if you want to appeal a refused application for:
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys</li>
-          </ul>
-          <p class="govuk-body">
-            Go to the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
-          </p>
-
-        </div>
-
-        <div class="govuk-inset-text">
-
-          <p class="govuk-body">
-            If your appeal is about listed building consent, you need the <a href="#" class="govuk-link">appeal a listed building consent decision guidance</a>.
-          </p>
-
-        </div>
-
-        <h2 class="govuk-heading-l pins-guidance-h2">Appealing to the Planning Inspectorate</h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            your appeal statement
+          </li>
+          <li>
+            your planning application form
+          </li>
+          <li>
+            the site plan for your appeal site
+          </li>
+          <li>
+            the plans, drawings and supporting documents for your application
+          </li>
+          <li>
+            your design and access statement, if you have one
+          </li>
+          <li>
+            the decision letter from the local planning department, if you have one
+          </li>
+          <li>
+            your draft statement of common ground, if you need one
+          </li>
+        </ul>
 
         <p class="govuk-body">
-          You make your appeal to the Planning Inspectorate.
+          Find out more about the <a href="#" class="govuk-link">documents you need to prepare.</a>.
         </p>
 
         <p class="govuk-body">
-          The Planning Inspectorate is an independent and impartial government body. It decides planning appeals on behalf of the Secretary of State.
+          You should have already:
+        </p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            chosen how you think the Planning Inspectorate should decide your appeal
+          </li>
+          <li>
+            told any other landowners about your appeal
+          </li>
+        </ul>
+
+        <p class="govuk-body">
+          Find out more about <a href="#" class="govuk-link">what you should do before you appeal</a>.
+        </p>
+
+        <p class="govuk-body">
+          You must have an email address to use the online service.
+        </p>
+
+        <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Appeal now
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+          </svg>
+        </a>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          If you cannot use the online service
+        </h2>
+
+        <p class="govuk-body">
+          Contact the Planning Inspectorate’s customer support team.
+        </p>
+
+        <p class="govuk-body">
+          Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a><br>
+          We aim to respond within 5 working days.
+        </p>
+
+        <p class="govuk-body">
+          Telephone: 0303 444 5000<br>
+          Monday to Friday, 9am to 5pm (except public holidays)<br>
+        </p>
+
+        <p class="govuk-body">
+          <a href="https://www.gov.uk/call-charges">Find out about call charges</a>
         </p>
 
         <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
+            <li class="gem-c-pagination__item gem-c-pagination__item--previous">
+              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
+                <span class="gem-c-pagination__link-title">
+                  <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                    <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
+                  </svg>
+                  <span class="gem-c-pagination__link-text">
+                    Previous
+                  </span>
+                </span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
+              </a>
+            </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="when-you-can-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -117,7 +177,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">When you can appeal</span>
+                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
               </a>
             </li>
 
@@ -149,7 +209,7 @@
         </div>
       </div>
     </div>
-
+    
   </main>
 </div>
 
